[gd_scene load_steps=2 format=3 uid="uid://b7aw1kxcq4mpl"]

[ext_resource type="Script" path="res://Scripts/Quest/QuestDetail.gd" id="1_8k6ql"]

[node name="QuestDetail" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8k6ql")

[node name="QuestDescription" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -56.0
color = Color(0.611765, 0.611765, 0.611765, 1)

[node name="Label" type="Label" parent="QuestDescription"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -255.0
grow_horizontal = 2
grow_vertical = 2
text = "제목 : 퀘스트 1"

[node name="RichTextLabel" type="RichTextLabel" parent="QuestDescription"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "밥먹기
자기
운동하기"

[node name="Btns" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Btns"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionPanel" type="MarginContainer" parent="Btns/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="OptionBtn" type="Button" parent="Btns/VBoxContainer/OptionPanel"]
layout_mode = 2
text = "옵션"

[node name="MarginContainer" type="MarginContainer" parent="Btns/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="Btns/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "닫기"

[connection signal="pressed" from="Btns/VBoxContainer/OptionPanel/OptionBtn" to="." method="button_pressed"]
[connection signal="pressed" from="Btns/VBoxContainer/OptionPanel/OptionBtn" to="." method="option_btn_pressed"]
[connection signal="pressed" from="Btns/VBoxContainer/MarginContainer/Button" to="." method="button_pressed"]
